--- a/SwipeCellKit.xcodeproj/xcshareddata/xcschemes/SwipeCellKit.xcscheme
+++ b/SwipeCellKit.xcodeproj/xcshareddata/xcschemes/SwipeCellKit.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1020"
+   LastUpgradeVersion = "0940"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -51,6 +51,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "3F234AE21E44AA5E00E22A38"
+            BuildableName = "MailExample.app"
+            BlueprintName = "MailExample"
+            ReferencedContainer = "container:Example/MailExample.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
